# CUDA_2025

./: README.md  compose.yml  mise.toml  workplace.code-workspace
.cursor/rules/: project-guidelines.mdc
backend/: .gitignore  Justfile  README.md  pyproject.toml
backend/app/: __main__.py  _models.py  _schemas.py  config.py  db.py  main.py  models.py  routes.py  schemas.py  settings.py
backend/app/alembic/: env.py  script.py.mako
backend/app/alembic/versions/: 1f81ff1f1e28_init.py  20f1ef876c36_switch_to_sqlalchemy_models.py  3192b5d9c6a2_use_json_for_results.py  3d1b3bfa60b6_add_scrapper_job_table.py  6ed2c666bbbf_cascade_tags.py  743cf0af9772_cascade_relations.py  7c60d8eada85_added_collection_id_to_ai_suggestion.py  95518561bc41_tags_field.py  a3af78866c8e_add_pgvector_extension_and_content_.py  c48a016c43c6_added_error_message_field.py  d80ff81ffa6f_change_to_nullable.py  ead5a63b90cd_not_so_initial.py  f801b9cb4eda_add_vector_database_tables_manually.py
backend/app/core/: jobs.py  router.py
backend/app/llm/: __init__.py  embeddings.py  llm_models.py  nlp.py
backend/app/models/: __init__.py  ai.py  base.py  core.py  job.py  tag.py
backend/app/modules/core/: crud_views.py  router.py
backend/app/modules/jobs/: __init__.py  router.py  tasks.py
backend/app/modules/scrapper/: analyzer.py  content_extractor.py  jobs.py  metadata_analyzer.py  models.py  nlp.py  router.py  scrape_url_cli.py  scrapper.py  scrapper_views.py  sentiment_cli.py
backend/app/modules/search/: router.py
backend/app/repositories/: bookmarks.py  collections.py  tags.py
backend/app/schemas/: base.py  bookmark.py  collection.py  tag.py
backend/app/scrapper/: analyzer.py  content_extractor.py  router.py  scrape_url_cli.py  scrapper.py  sentiment_cli.py
backend/app/search/: job.py  router.py  semantic.py
backend/docs/: scrapper.md
frontend/: biome.json  index.html  package.json  prettier.config.js  tsconfig.json  vite.config.js
frontend/src/: defines.d.ts  main.tsx  routeTree.gen.ts  router.tsx
frontend/src/components/: AddLinkForm.tsx  AppHeader.tsx  Header.tsx  PageWrapper.tsx  demo.FormComponents.tsx
frontend/src/data/: api-types.ts  bookmarks.ts  cache-keys.ts  collections.ts  data-types.ts  tags.ts  types.ts
frontend/src/hooks/: demo.form.ts
frontend/src/routes/: __root.tsx  bookmarks.tsx  collection.$collectionId.tsx  (+6 more)
(+158 files in other folders)
